--- a/src/main/resources/templates/Cliente/listaCliente.html
+++ b/src/main/resources/templates/Cliente/listaCliente.html
@@ -2,11 +2,27 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/listas.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Lista Clientes</title>
 </head>
 <body>
+<header>
+    <nav>
+        <a th:href="@{/}" class="logo">workana</a>
+        <ul>
+            <li><a th:href="@{/formularioProveedor}" class="btn trabajar">Quiero trabajar</a></li>
+            <li><a th:href="@{/formularioCliente}" class="btn quiero">Quiero contratar</a></li>
+            <li><a th:href="@{/formularioPrestaciones}" class="btn trabajar">Prestaciones</a></li>
+            <li><a th:href="@{/formularioResenas}" class="btn trabajar">Reseñas</a></li>
+            <li><a th:href="@{/formularioContratos}" class="btn trabajar">Contrato</a></li>
+            <li><a th:href="@{/nosotros}" class="btn trabajar">Nosotros</a></li>
+        </ul>
+
+    </nav>
+</header>
 <div class="container mt-3">
     <!-- Formulario de búsqueda -->
     <form th:action="@{/clientes}" method="get" class="mb-3">
@@ -47,6 +63,13 @@
     <!-- Botones de acción -->
     <a th:href="@{/formularioCliente}" class="btn btn-success">Nuevo Cliente</a>
     <a th:href="@{/clientes/pdf}" class="btn btn-info">Generar PDF</a>
-</div>
+    <footer>
+        <div class="footer-content">
+            <h3>Workana</h3>
+            <p>&copy; 2025 Workana. Todos los derechos reservados.</p>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.js"></script>
 </body>
 </html>
