--- a/src/main/resources/templates/Contrato/formulario.html
+++ b/src/main/resources/templates/Contrato/formulario.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <<meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" th:href="@{/css/formularioCliente.css}">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.0.0/dist/flowbite.min.css" rel="stylesheet">
     <title>Formulario de Contrato</title>
-
 </head>
 <body>
 
@@ -14,8 +13,8 @@
     <nav>
         <a th:href="@{/}" class="logo">workana</a>
         <ul>
-            <li><a th:href="@{/formularioProveedor}" class="btn quiero">Quiero contratar</a></li>
-            <li><a th:href="@{/formularioCliente}" class="btn trabajar">Quiero trabajar</a></li>
+            <li><a th:href="@{/formularioProveedor}" class="btn trabajar">Quiero trabajar</a></li>
+            <li><a th:href="@{/formularioCliente}" class="btn quiero">Quiero contratar</a></li>
             <li><a th:href="@{/formularioPrestaciones}" class="btn trabajar">Prestaciones</a></li>
             <li><a th:href="@{/formularioResenas}" class="btn trabajar">Reseñas</a></li>
             <li><a th:href="@{/formularioContratos}" class="btn trabajar">Contrato</a></li>
@@ -75,6 +74,9 @@
 
             <div class="d-flex justify-content-between">
                 <button type="submit" class="btn-submit">Guardar</button>
+                <br>
+                <br>
+                <br>
                 <a th:href="@{/contratos}" class="btn-submit">Cancelar</a>
             </div>
         </form>
